# content-factory

./: .gitignore  AGENTS.md  APIs.md  CLAUDE.md  CONTENT-CONTEXT.md  CONTENT-FACTORY-v2.3-DESIGN.md  EXECUTION_CHECKLIST.md  EXTERNAL-REVIEW-LESSONS.md  EXTERNAL-REVIEW-ROUND2-FIXES.md  GEMINI.md  HOW-THE-WORKFLOW-WORKS.md  LESSONS-LEARNED.md  PARALLEL-ARCHITECTURE-v4.md  README-v3.md  README.md  content-factory-v2-showcase.html  pyproject.toml  requirements.txt  run-content-factory.md
.claude/commands/: brainstorm.md
Opus-CF/: CLAUDE.md  EXPLANATION-DATABASE.md  INTEGRATION-ANALYSIS.md  QUICK-REFERENCE.md  README.md  run-opus-cf.md
Opus-CF/agents/: analysis-agent-v1.md  criticism-engine-v1.md  discovery-agent-v1.md  editor-agent-v1.md  research-agent-v1.md  synthesis-agent-v1.md  writer-agent-v1.md
Opus-CF/templates/: input-brief-template.md
agents/: analyzer-agent-v2.md  analyzer-agent.md  codex-brutal-critic-agent.md  editor-agent-v2.md  editor-agent.md  researcher-agent-v2.md  researcher-agent.md  scoring-rubric.md  simple-linkedin-writer.md  simple-twitter-writer.md  twitter-thread-agent-v2.md  twitter-thread-scoring-rubric.md  visualizer-agent.md  writer-agent-v2.md  writer-agent.md  youtube-seo-agent.md
codex-CF/: README.md  pyproject.toml
codex-CF/docs/: ARCHITECTURE.md
codex-CF/examples/: input_topic.json
codex-CF/src/codex_cf/: __init__.py  cli.py  models.py  pipeline.py  scoring.py
codex-CF/tests/: test_pipeline.py  test_scoring.py
deutsch-framework/: epistemology.md  examples.md  explanations.md  problem-solving.md
shared/deutsch-framework/: 5-test-framework.md  README.md  criticism-methods.md  epistemology.md
src/content_factory/: __init__.py  cli.py  config.py  orchestrator.py  telemetry.py
src/content_factory/tools/: __init__.py  ablation.py  analysis.py  dashboard.py
src/content_factory/validators/: __init__.py  analysis_validator.py  base.py  editor_validator.py  research_validator.py  writer_validator.py
templates/: article-template.md  linkedin-post-template.md  newsletter-template.md  podcast-notes-template.md  twitter-thread-template-v2.md  twitter-thread-template.md  youtube-script-template.md
tests/: __init__.py
tests/fixtures/: sample_editor_feedback.md  sample_research.md
tests/integration/: test_pipeline.py
tests/unit/: test_validators.py
