[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-cf"
version = "0.1.0"
description = "Epistemic-first redesign of Content Factory for knowledge creation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "codex" }]
dependencies = []

[project.scripts]
codex-cf = "codex_cf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
